# src/routes.ts
@@ -1,12 +1,12 @@
-import {authMiddleware} from "./lib/auth";
-import * as swaggerUi from 'swagger-ui-express';
-import * as swaggerDocument from '../swagger/swagger.json';
-import {BlogService} from "./services/blogService";
+export enum Routes {
+    readBlog = '/blog/:id',
+    createBlog = '/blog',
+    updateBlog = '/blog/:id',
+    deleteBlog = '/blog/:id',
+    getBlogList = '/blogs',
 
-const blogService = new BlogService();
-export const appRouter = (app) => {
-    app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-
-    app.get('/', [authMiddleware], (req, res) => res.send('Express + TypeScript Server'));
-    app.get('blog', blogService.get);
-};
+    crateComment = '/comment',
+    updateComment = '/comment/:id',
+    deleteComment = '/comment/:id',
+    getCommentsByBlog = '/comments/:blogId',
+}
